@@ -1502,8 +1502,10 @@ data.raw["item"]["solid-fuel"].fuel_emissions_multiplier = 1.5
 data.raw["item"]["solid-fuel"].fuel_acceleration_multiplier = 1
 data.raw["item"]["solid-fuel"].fuel_top_speed_multiplier = 1.1
 
-data.raw["gun"]["shotgun"].minimum_range = 0.5
-data.raw["gun"]["combat-shotgun"].minimum_range = 1.25
+data.raw["gun"]["shotgun"].attack_parameters.min_range = 0.5
+data.raw["gun"]["combat-shotgun"].attack_paramters.min_range = 1.25
+
+
 --im so happy i deleted tiktok but at the same time some of the shitposts were aamziong
 --same (COUGH) rice
 --it'll be some of the most mind-rotting thing ever and i love it
